--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300;400;500&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <img src="images/icons/light_mode.svg" alt="Light Mode" id="light-mode-toggle" class="light-mode-icon">
     <img src="images/icons/dark_mode.svg" alt="Dark Mode" id="dark-mode-toggle" class="dark-mode-icon" hidden>
@@ -41,19 +44,20 @@
     </nav>
 
     <div class="timer-container">
-      <div class="timer-widget">
-        <div class="timer-time" id="timerTime"></div>
-        <div class="timer-date">
-          <div class="timer-date-number" id="timerDate"></div>
-          <div class="timer-month" id="timerMonth"></div>
+        <div class="timer-widget">
+            <div class="timer-time" id="timerTime"></div>
+            <div class="timer-date">
+                <div class="timer-date-number" id="timerDate"></div>
+                <div class="timer-month" id="timerMonth"></div>
+            </div>
         </div>
-      </div>
-      <div class="tick-tock-line"><span class="tick-tock-line-text">Tick-tock</span>, your next project needs me.</div>
+        <div class="tick-tock-line"><span class="tick-tock-line-text">Tick-tock</span>, your next project needs me.
+        </div>
     </div>
 
     <div class="container">
         <div class="left-column">
-            
+
             <img src="images/light_logo.svg" alt="Light Logo" class="light-logo">
             <img src="images/AngelikaWysocka_dark.jpg" alt="Angelika Wysocka" class="profile-image">
             <h1 class="name-heading">Angelika Wysocka</h1>
@@ -64,18 +68,20 @@
         <div class="right-column">
             <section id="home">
                 <h1 class="section-heading">
-                    <span class="hello-line">Hello <img src="images/icons/hand.svg" alt="waving hand" class="wave"></span>
+                    <span class="hello-line">Hello <img src="images/icons/hand.svg" alt="waving hand"
+                            class="wave"></span>
                     <span class="im-line">I'm <img src="images/icons/name.svg" alt="name" class="name">.</span>
                     <br class="im-line-break">
-                    <span class="im-line-two">I'm <span class="letter">a</span> 
-                    <span class="titles">
-                        <span class="title-item">Web Developer</span>
-                        <span class="title-item">Front End Developer</span>
-                        <span class="title-item">Back End Developer</span>
-                        <span class="title-item">Problem Solver</span>
-                    </span>
+                    <span class="im-line-two">I'm <span class="letter">a</span>
+                        <span class="titles">
+                            <span class="title-item">Web Developer</span>
+                            <span class="title-item">Front End Developer</span>
+                            <span class="title-item">Back End Developer</span>
+                            <span class="title-item">Problem Solver</span>
+                        </span>
                 </h1>
-                <p class="intro-text">I'm passionate about building modern, user-friendly websites that bring ideas to life. I'm passionate about turning ideas into websites that are both beautiful and functional.</p>
+                <p class="intro-text">I'm passionate about building modern, user-friendly websites that bring ideas to
+                    life. I'm passionate about turning ideas into websites that are both beautiful and functional.</p>
                 <div class="three-squares-container">
                     <div class="square">
                         <h1>+3</h1>
@@ -95,9 +101,40 @@
 
             <section id="about">
                 <h1 class="section-heading">About Me</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
-            </section>
+                <p>I've always enjoyed learning new skills, which led me through fields like childcare, accounting,
+                    beauty therapy, and IT — but nothing clicked the way coding did.</p>
+
+                <p>I discovered programming by chance during a family holiday and quickly realised it was exactly what
+                    I’d been searching for — something that challenges me, inspires me, and lets me keep learning. I’ve
+                    since built a strong foundation in web development and continue to grow my skills.</p>
+
+                <p>I love how coding blends logic with creativity. Once I start a project, I often get completely
+                    absorbed — sketching ideas in spare moments or staying up late to bring them to life.</p>
+
+                <p>Outside of tech, I’m also a proud mum of two. I love spending time with my children, watching them
+                    grow, and making memories together. When I’m not coding or building something new, you’ll often find
+                    me reading self-development books — a hobby that helps me become a better version of myself.</p>
+                <h2>My Journey</h2>
+                <div class="vertical-timeline">
+                  <div class="timeline-item">
+                    <div class="timeline-year">2019</div>
+                    <div class="timeline-content">HND Beauty Therapy</div>
+                  </div>
+                  <div class="timeline-item">
+                    <div class="timeline-year">2021</div>
+                    <div class="timeline-content">HNC Administration with Information Technology</div>
+                  </div>
+                  <div class="timeline-item">
+                    <div class="timeline-year">2024</div>
+                    <div class="timeline-content">HNC Digital Design and Web Development</div>
+                  </div>
+                  <div class="timeline-item">
+                    <div class="timeline-year">2025</div>
+                    <div class="timeline-content">HND Web Development</div>
+                  </div>
+                </div>
+            
+                </section>
 
             <section id="skills">
                 <h1 class="section-heading">Skills</h1>
@@ -119,8 +156,7 @@
 
             <section id="contact">
                 <h1 class="section-heading">Let's Talk</h1>
-                <form id="contactForm" class="contact-form"   action="https://formspree.io/f/xanoaynb"
-                method="POST">
+                <form id="contactForm" class="contact-form" action="https://formspree.io/f/xanoaynb" method="POST">
                     <input type="hidden" name="_captcha" value="false">
                     <div class="form-group">
                         <label for="name">Name</label>
@@ -153,38 +189,38 @@
 
     <div class="modal">
         <div class="modal-content">
-        <div class="modal-body">
-            <div class="modal-header">
-                <div></div>
-                <h1 class="section-heading">Let's Talk</h1>
-                <button class="close-button">&times;</button>
+            <div class="modal-body">
+                <div class="modal-header">
+                    <div></div>
+                    <h1 class="section-heading">Let's Talk</h1>
+                    <button class="close-button">&times;</button>
+                </div>
+
+
+                <form id="contactForm" class="contact-form" action="https://formspree.io/f/xanoaynb" method="POST">
+                    <input type="hidden" name="_captcha" value="false">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" required>
+                        <span class="error-message" id="nameError"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email Address</label>
+                        <input type="email" id="email" name="email" required>
+                        <span class="error-message" id="emailError"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+                        <span class="error-message" id="messageError"></span>
+                    </div>
+                    <button type="submit" class="submit-button">Send Message</button>
+                </form>
             </div>
-
-
-            <form id="contactForm" class="contact-form"   action="https://formspree.io/f/xanoaynb"
-            method="POST">
-                <input type="hidden" name="_captcha" value="false">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" required>
-                    <span class="error-message" id="nameError"></span>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email Address</label>
-                    <input type="email" id="email" name="email" required>
-                    <span class="error-message" id="emailError"></span>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" rows="5" required></textarea>
-                    <span class="error-message" id="messageError"></span>
-                </div>
-                <button type="submit" class="submit-button">Send Message</button>
-            </form>
         </div>
     </div>
-</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js" defer></script>
 </body>
+
 </html>
