--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
@@ -96,50 +97,132 @@
                         <p class="square-label">hours of<br>coding</p>
                     </div>
                 </div>
-                <button class="talk-button-section">Let's Talk</button>
             </section>
 
             <section id="about">
                 <h1 class="section-heading">About Me</h1>
-                <p>I've always enjoyed learning new skills, which led me through fields like childcare, accounting,
-                    beauty therapy, and IT — but nothing clicked the way coding did.</p>
+                <p>I'm a proud mum of two who loves making memories with my children. </p>
+                <p>I've always been eager to learn,
+                    which led me through careers in childcare, accounting, beauty, and IT — but nothing clicked like
+                    coding.</p>
 
-                <p>I discovered programming by chance during a family holiday and quickly realised it was exactly what
-                    I’d been searching for — something that challenges me, inspires me, and lets me keep learning. I’ve
-                    since built a strong foundation in web development and continue to grow my skills.</p>
+                    <p>I discovered programming by chance and quickly realised it was exactly what I'd been searching for:
+                    something that challenges, excites, and keeps me learning. I love how coding blends logic with
+                    creativity, and once I start a project, I often get completely absorbed. </p>
 
-                <p>I love how coding blends logic with creativity. Once I start a project, I often get completely
-                    absorbed — sketching ideas in spare moments or staying up late to bring them to life.</p>
-
-                <p>Outside of tech, I’m also a proud mum of two. I love spending time with my children, watching them
-                    grow, and making memories together. When I’m not coding or building something new, you’ll often find
-                    me reading self-development books — a hobby that helps me become a better version of myself.</p>
+                    <p>When I'm not coding or with my kids, I enjoy reading self-development books — a hobby that helps me
+                    grow and improve every day.
+                </p>
                 <h2>My Journey</h2>
                 <div class="vertical-timeline">
-                  <div class="timeline-item">
-                    <div class="timeline-year">2019</div>
-                    <div class="timeline-content">HND Beauty Therapy</div>
-                  </div>
-                  <div class="timeline-item">
-                    <div class="timeline-year">2021</div>
-                    <div class="timeline-content">HNC Administration with Information Technology</div>
-                  </div>
-                  <div class="timeline-item">
-                    <div class="timeline-year">2024</div>
-                    <div class="timeline-content">HNC Digital Design and Web Development</div>
-                  </div>
-                  <div class="timeline-item">
-                    <div class="timeline-year">2025</div>
-                    <div class="timeline-content">HND Web Development</div>
-                  </div>
+                    <div class="timeline-item">
+                        <div class="timeline-year">2019</div>
+                        <div class="timeline-content">HND Beauty Therapy</div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-year">2021</div>
+                        <div class="timeline-content">HNC Administration with Information Technology</div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-year">2024</div>
+                        <div class="timeline-content">HNC Digital Design and Web Development</div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-year">2025</div>
+                        <div class="timeline-content">HND Web Development</div>
+                    </div>
                 </div>
-            
-                </section>
+
+            </section>
 
             <section id="skills">
                 <h1 class="section-heading">Skills</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
+                <div class="skills-grid">
+                    <div class="skill-box">
+                        <img src="images/icons/html.svg" alt="HTML" class="skill-logo">
+                        <div class="skill-info">
+                            <div class="skill-name">HTML5</div>
+                            <div class="skill-desc">Markup Language</div>
+                        </div>
+                    </div>
+                    <div class="skill-box">
+                        <img src="images/icons/css.svg" alt="CSS" class="skill-logo">
+                        <div class="skill-info">
+                            <div class="skill-name">CSS3</div>
+                            <div class="skill-desc">Style Sheet Language</div>
+                        </div>
+                    </div>
+                    <div class="skill-box">
+                        <img src="images/icons/js.svg" alt="JavaScript" class="skill-logo">
+                        <div class="skill-info">
+                            <div class="skill-name">JavaScript</div>
+                            <div class="skill-desc">Programming Language</div>
+                        </div>
+                    </div>
+                    <div class="skill-box">
+                        <img src="images/icons/bootstrap.svg" alt="Bootstrap" class="skill-logo">
+                        <div class="skill-info">
+                            <div class="skill-name">Bootstrap</div>
+                            <div class="skill-desc">CSS Framework</div>
+                        </div>
+                    </div>
+                    <div class="skill-box">
+                        <img src="images/icons/jquery.svg" alt="jQuery" class="skill-logo">
+                        <div class="skill-info">
+                            <div class="skill-name">jQuery</div>
+                            <div class="skill-desc">JavaScript Library</div>
+                        </div>
+                    </div>
+                    <div class="skill-box">
+                        <img src="images/icons/cursor.svg" alt="Cursor" class="skill-logo cursor-logo">
+                        <div class="skill-info">
+                            <div class="skill-name">Cursor</div>
+                            <div class="skill-desc">Code Editor</div>
+                        </div>
+                    </div>
+                    <div class="skill-box">
+                        <img src="images/icons/vscode.svg" alt="VSCode" class="skill-logo">
+                        <div class="skill-info">
+                            <div class="skill-name">VSCode</div>
+                            <div class="skill-desc">Code Editor</div>
+                        </div>
+                    </div>
+                    <div class="skill-box">
+                        <img src="images/icons/github.svg" alt="GitHub" class="skill-logo">
+                        <div class="skill-info">
+                            <div class="skill-name">GitHub</div>
+                            <div class="skill-desc">Version Control</div>
+                        </div>
+                    </div>
+                    <div class="skill-box">
+                        <img src="images/icons/php.svg" alt="PHP" class="skill-logo">
+                        <div class="skill-info">
+                            <div class="skill-name">PHP</div>
+                            <div class="skill-desc">Programming Language</div>
+                        </div>
+                    </div>
+                    <div class="skill-box">
+                        <img src="images/icons/mysql.svg" alt="MySQL" class="skill-logo">
+                        <div class="skill-info">
+                            <div class="skill-name">MySQL</div>
+                            <div class="skill-desc">Database</div>
+                        </div>
+                    </div>
+                    <div class="skill-box">
+                        <img src="images/icons/wordpress.svg" alt="WordPress" class="skill-logo">
+                        <div class="skill-info">
+                            <div class="skill-name">WordPress</div>
+                            <div class="skill-desc">Content Management System</div>
+                        </div>
+                    </div>
+                    <div class="skill-box">
+                        <img src="images/icons/canva.svg" alt="Canva" class="skill-logo">
+                        <div class="skill-info">
+                            <div class="skill-name">Canva</div>
+                            <div class="skill-desc">Design Tool</div>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <section id="projects">
@@ -150,8 +233,72 @@
 
             <section id="testimonials">
                 <h1 class="section-heading">Testimonials</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
+                <div id="testimonialCarousel" class="carousel slide testimonials-container position-relative"
+                    data-bs-ride="carousel" data-bs-interval="6000">
+                    <div class="carousel-controls-top">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="testimonial-header d-flex align-items-center">
+                                <div class="testimonial-profile">
+                                    <img src="images/profil1.png" alt="Profile 1" class="profile-pic">
+                                </div>
+                                <div class="testimonial-author ms-3">
+                                    <h3>John Smith</h3>
+                                    <span class="author-title">AI-Generated Content</span>
+                                </div>
+                            </div>
+                            <div class="testimonial-content">
+                                <p>"Working with Angelika was a fantastic experience. Her attention to detail and
+                                    creative approach to problem-solving made our project a huge success. She
+                                    consistently delivered high-quality work and was always responsive to our needs."
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="testimonial-header d-flex align-items-center">
+                                <div class="testimonial-profile">
+                                    <img src="images/profil2.png" alt="Profile 2" class="profile-pic">
+                                </div>
+                                <div class="testimonial-author ms-3">
+                                    <h3>Sarah Johnson</h3>
+                                    <span class="author-title">AI-Generated Content</span>
+                                </div>
+                            </div>
+                            <div class="testimonial-content">
+                                <p>"Angelika's expertise in web development transformed our website into a modern,
+                                    user-friendly platform. Her ability to understand our vision and translate it into
+                                    reality was impressive. I highly recommend her services."</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="testimonial-header d-flex align-items-center">
+                                <div class="testimonial-profile">
+                                    <img src="images/profil3.png" alt="Profile 3" class="profile-pic">
+                                </div>
+                                <div class="testimonial-author ms-3">
+                                    <h3>Michael Brown</h3>
+                                    <span class="author-title">AI-Generated Content</span>
+                                </div>
+                            </div>
+                            <div class="testimonial-content">
+                                <p>"I was amazed by Angelika's technical skills and creativity. She not only delivered
+                                    exactly what we needed but also suggested improvements we hadn't considered. Her
+                                    work exceeded our expectations."</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <section id="contact">
