--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js" defer></script>
 </head>
 
 <body>
@@ -64,6 +66,14 @@
                 <h1 class="name-heading">Angelika Wysocka</h1>
                 <h2 class="subtitle">Product Designer & Developer</h2>
                 <h2 class="subtitle">Wishaw, Scotland, UK</h2>
+                <div class="buttons-container" style="display: flex; justify-content: center; gap: 20px; padding: 20px;">
+                    <a href="https://github.com/nana13w"><img
+                        src="images/icons/github-light.svg" alt="GitHub" class="github-icon"
+                        style="width: 30px; height: 30px; border-radius: 6px;"></a>
+                    <a href="https://www.linkedin.com/in/angelika-wysocka-087925213"><img
+                        src="images/icons/linkin.svg" alt="LinkedIn" class="linkedin-icon"
+                        style="width: 30px; height: 30px; border-radius: 6px;"></a>
+                </div>
                 <button class="talk-button">Let's Talk</button>
             </div>
             <div class="right-column">
@@ -249,69 +259,69 @@
                             <!-- Project 1 -->
                             <div class="carousel-item active">
                                 <div class="project-carousel-slide joSmith-project">
-                                    <div class="project-main-image-wrapper" style="position: relative;">
+                        <div class="project-main-image-wrapper" style="position: relative;">
                                         <img src="images/portfolio_items/joSmith/joSmith_website.png"
                                             alt="Jo Smith Website" class="project-image"
                                             data-hover-src="images/portfolio_items/joSmith/joSmith_website_noColour.png">
                                         <div class="project-overlay-grid">
                                             <div class="project-description-container">
-                                                <h4>Jo Smith Portfolio</h4>
+                                    <h4>Jo Smith Portfolio</h4>
                                                 <span class="project-description">
                                                     A clean, modern portfolio site for a fictional photographer, built
                                                     with HTML,
-                                                    CSS, JavaScript, and responsive design.
-                                                </span>
-                                            </div>
+                                        CSS, JavaScript, and responsive design.
+                                    </span>
+                                </div>
                                             <div
                                                 style="grid-column: 2; grid-row: 1; align-self: start; justify-self: end;">
                                                 <img src="images/portfolio_items/joSmith/wireframe.png" alt="Wireframe"
                                                     class="project-image wireframe-image"
                                                     data-hover-src="images/portfolio_items/joSmith/wireframe_noColour.png">
-                                            </div>
+                                </div>
                                             <div
                                                 style="grid-column: 1; grid-row: 2; align-self: end; justify-self: start;">
                                                 <img src="images/portfolio_items/joSmith/styleBoard.png"
                                                     alt="Style Guide" class="project-image styleBoard-image"
                                                     data-hover-src="images/portfolio_items/joSmith/styleBoard_noColour.png">
-                                            </div>
+                                </div>
                                             <div
                                                 style="grid-column: 2; grid-row: 2; align-self: end; justify-self: end;">
                                                 <img src="images/portfolio_items/joSmith/navMap.png" alt="Nav Map"
                                                     class="project-image navMap-image"
                                                     data-hover-src="images/portfolio_items/joSmith/navMap_noColour.png">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="project-buttons-container" style="width: 45%; margin-left: 10px;">
-                                        <div class="project-buttons-row"
-                                            style="display: flex; justify-content: flex-start; gap: 20px; margin-top: 24px;">
+                                </div>
+                            </div>
+                        </div>
+                                    <div class="project-buttons-container">
+                            <div class="project-buttons-row"
+                                style="display: flex; justify-content: flex-start; gap: 20px; margin-top: 24px;">
                                             <a href="https://github.com/nana13w/JoSmith"><img
                                                     src="images/icons/github-light.svg" alt="GitHub" class="github-icon"
-                                                    style="width: 45px; height: 45px; border-radius: 8px;"></a>
+                                        style="width: 45px; height: 45px; border-radius: 8px;"></a>
                                             <a href="https://nana13w.github.io/JoSmith/"><img
                                                     src="images/icons/web-light.svg" alt="Website" class="website-icon"
-                                                    style="width: 45px; height: 45px; border-radius: 8px;"></a>
-                                        </div>
-                                        <div class="project-tech-icons-marquee">
-                                            <div class="marquee-track">
-                                                <!-- One full set of icons -->
-                                                <img src="images/icons/html.svg" alt="HTML5">
-                                                <img src="images/icons/css.svg" alt="CSS3">
-                                                <img src="images/icons/js.svg" alt="JavaScript">
-                                                <img src="images/icons/bootstrap.svg" alt="Bootstrap">
-                                                <img src="images/icons/jquery.svg" alt="jQuery">
-                                                <img src="images/icons/cursor-light.svg" alt="Cursor">
+                                        style="width: 45px; height: 45px; border-radius: 8px;"></a>
+                            </div>
+                            <div class="project-tech-icons-marquee">
+                                <div class="marquee-track">
+                                    <!-- One full set of icons -->
+                                    <img src="images/icons/html.svg" alt="HTML5">
+                                    <img src="images/icons/css.svg" alt="CSS3">
+                                    <img src="images/icons/js.svg" alt="JavaScript">
+                                    <img src="images/icons/bootstrap.svg" alt="Bootstrap">
+                                    <img src="images/icons/jquery.svg" alt="jQuery">
+                                    <img src="images/icons/cursor-light.svg" alt="Cursor">
                                                 <img src="images/icons/github-light.svg" class="github-icon alt="
                                                     GitHub">
-                                                <img src="images/icons/canva.svg" alt="Canva">
+                                    <img src="images/icons/canva.svg" alt="Canva">
 
-                                                <!-- Duplicated set for seamless loop -->
-                                                <img src="images/icons/html.svg" alt="HTML5">
-                                                <img src="images/icons/css.svg" alt="CSS3">
-                                                <img src="images/icons/js.svg" alt="JavaScript">
-                                                <img src="images/icons/bootstrap.svg" alt="Bootstrap">
-                                                <img src="images/icons/jquery.svg" alt="jQuery">
-                                                <img src="images/icons/cursor-light.svg" alt="Cursor">
+                                    <!-- Duplicated set for seamless loop -->
+                                    <img src="images/icons/html.svg" alt="HTML5">
+                                    <img src="images/icons/css.svg" alt="CSS3">
+                                    <img src="images/icons/js.svg" alt="JavaScript">
+                                    <img src="images/icons/bootstrap.svg" alt="Bootstrap">
+                                    <img src="images/icons/jquery.svg" alt="jQuery">
+                                    <img src="images/icons/cursor-light.svg" alt="Cursor">
                                                 <img src="images/icons/github-light.svg" class="github-icon"
                                                     alt="GitHub">
                                                 <img src="images/icons/canva.svg" alt="Canva">
@@ -357,7 +367,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="project-buttons-container" style="width: 45%; margin-left: 10px;">
+                                    <div class="project-buttons-container">
                                         <div class="project-buttons-row"
                                             style="display: flex; justify-content: flex-start; gap: 20px; margin-top: 24px;">
                                             <a href="https://github.com/nana13w/VinylsOnline"><img
@@ -432,7 +442,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="project-buttons-container" style="width: 45%; margin-left: 10px;">
+                                    <div class="project-buttons-container">
                                         <div class="project-buttons-row"
                                             style="display: flex; justify-content: flex-start; gap: 20px; margin-top: 24px;">
                                             <a href="https://github.com/nana13w/Nina_Niko"><img
@@ -462,7 +472,7 @@
                                                 <img src="images/icons/vscode.svg" alt="VSCode">
                                                 <img src="images/icons/github-light.svg" class="github-icon alt="
                                                     GitHub">
-                                                <img src="images/icons/canva.svg" alt="Canva">
+                                    <img src="images/icons/canva.svg" alt="Canva">
                                             </div>
                                         </div>
 
@@ -505,7 +515,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="project-buttons-container" style="width: 45%; margin-left: 10px;">
+                                    <div class="project-buttons-container">
                                         <div class="project-buttons-row"
                                             style="display: flex; justify-content: flex-start; gap: 20px; margin-top: 24px;">
                                             <a href="https://github.com/nana13w/BikeKingBorders"><img
@@ -540,22 +550,13 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- Lightbox Modal -->
-                    <div id="imageModal" class="position-fixed top-0 start-0"
-                        style="display: none; z-index: 9999; width: 100vw; height: 100vh; background: rgba(0,0,0,0.9); opacity: 0; transition: opacity 0.2s ease;">
-                        <div class="d-flex align-items-center justify-content-center h-100">
-                            <img src="" id="modalImage"
-                                style="max-height: 70vh; max-width: 60vw; object-fit: contain; border-radius: 12px;">
-                        </div>
-                    </div>
                 </section>
 
                 <section id="testimonials">
                     <h1 class="section-heading">Testimonials</h1>
                     <div id="testimonialCarousel" class="carousel slide testimonials-container position-relative"
                         data-bs-ride="carousel" data-bs-interval="6000">
-                        <div class="carousel-controls-top">
+                        <div class="carousel-controls-top testimonial-controls">
                             <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel"
                                 data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -690,8 +691,13 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/script.js" defer></script>
+
+    <!-- Lightbox Modal for Project Images -->
+    <div id="imageModal">
+        <div class="modal-image-container">
+            <img id="modalImage" src="" alt="Project Preview">
+        </div>
+    </div>
 </body>
 
 </html>
